[gd_scene load_steps=9 format=3 uid="uid://by8heudx5e02y"]

[ext_resource type="Script" path="res://Scripts/IceSlide.gd" id="1_7m4eb"]
[ext_resource type="Script" path="res://Scripts/RemoteTrans.gd" id="2_jsc8i"]
[ext_resource type="Texture2D" uid="uid://drkc8756iukx5" path="res://Sprites/BIG/hs_ramp+platform_02.png" id="3_p4fpm"]

[sub_resource type="Curve2D" id="Curve2D_42e5l"]
_data = {
"points": PackedVector2Array(461.671, -339.814, -461.671, 339.814, 2047, 83, 375.136, 293.885, -375.136, -293.885, 1071, -64)
}
point_count = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o2jxn"]
size = Vector2(242.206, 130.53)

[sub_resource type="Animation" id="Animation_ha11k"]
resource_name = "SlideJump"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PathFollow2D:v_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.1, -29, -160, -0.2, 19, 0.2, 23, -5, 0, -44, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 0.6)
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"EndJump"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gogvc"]
_data = {
"SlideJump": SubResource("Animation_ha11k")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f5hs8"]
size = Vector2(3403, 1122)

[node name="IceSlideL" type="Path2D"]
position = Vector2(-88, 1810)
curve = SubResource("Curve2D_42e5l")
script = ExtResource("1_7m4eb")
slideDirection = "Left"
slideSpeed = 0.5

[node name="PathFollow2D" type="PathFollow2D" parent="."]
position = Vector2(2049.96, 87.0268)
rotation = 2.50708
v_offset = -5.0
loop = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="PathFollow2D"]
script = ExtResource("2_jsc8i")

[node name="ColorRect" type="ColorRect" parent="PathFollow2D"]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="EntryPoint" type="Area2D" parent="PathFollow2D"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/EntryPoint"]
position = Vector2(35.6034, 21.0879)
shape = SubResource("RectangleShape2D_o2jxn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
callback_mode_process = 0
libraries = {
"": SubResource("AnimationLibrary_gogvc")
}

[node name="SlideSprite" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(1721, 102)
texture = ExtResource("3_p4fpm")
flip_h = true

[node name="EntryCheck" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntryCheck"]
position = Vector2(934.5, -145)
shape = SubResource("RectangleShape2D_f5hs8")

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="body_entered" from="PathFollow2D/EntryPoint" to="." method="_on_slide_entry_point_body_entered"]
[connection signal="body_entered" from="EntryCheck" to="." method="_on_entry_check_body_entered"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
